--- a/01-hello-react/03_jsx语法规则/1.jsx语法规则.html
+++ b/01-hello-react/03_jsx语法规则/1.jsx语法规则.html
@@ -17,10 +17,10 @@
     </div>
 </body>
 <!-- 引入依赖 ,引入的时候，必须就按照这个步骤-->
-<script src="../React-js/react.development.js" type="text/javascript"></script>
-<script src="../React-js/react-dom.development.js" type="text/javascript"></script>
+<script src="../../React-js/react.development.js" type="text/javascript"></script>
+<script src="../../React-js/react-dom.development.js" type="text/javascript"></script>
 
-<script src="../React-js/babel.min.js"></script>
+<script src="../../React-js/babel.min.js"></script>
 <!--这里使用了js来创建虚拟DOM-->
 <script type="text/babel">
         const MyId = "title";
@@ -36,18 +36,18 @@
         ReactDOM.render(VDOM,document.getElementById("test"));
         
         /*
-        JS表达式：返回一个值，可以放在任何一个需要值的地方  a  a+b  demo(a)  arr.map() function text(){}
-        JS语句：if(){} for(){} while(){} swith(){} 不会返回一个值
+          JS表达式：返回一个值，可以放在任何一个需要值的地方  a  a+b  demo(a)  arr.map() function text(){}
+          JS语句：if(){} for(){} while(){} swith(){} 不会返回一个值
         */
 
-        //1.定义虚拟DOM，不能使用“”
-        //2.标签中混入JS表达式的时候使用{}
-        //3.样式的类名指定不要使用class，使用className
-        //4.内敛样式要使用style={{样式:"值"}}
-        //5.不能有多个根标签，只能有一个跟标签
-        //6.标签必须闭合
-        //7.如果小写字母开头，就将标签转化为html同名元素，如果html中无该标签对应的元素，就报错
-        // 如果是大写字母开头，react就去渲染对应的组件，如果没有就报错
+        // 1.定义虚拟DOM，不能使用“”
+        // 2.标签中混入JS表达式的时候使用{}
+        // 3.样式的类名指定不要使用class，使用className
+        // 4.内敛样式要使用style={{key:"value"}}
+        // 5.不能有多个根标签，只能有一个跟标签
+        // 6.标签必须闭合
+        // 7.如果小写字母开头，就将标签转化为html同名元素，如果html中无该标签对应的元素，就报错
+        // 8.如果是大写字母开头，react就去渲染对应的组件，如果没有就报错
 </script>
 
 </html>
